[tool.poetry]
name = "pomodoroz"
version = "0.1.0"
description = ""
authors = ["lucaslima18 <lucas.ala1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
questionary = "^2.0.1"
pyfiglet = "^1.0.2"
dbus-python = "^1.3.2"
plyer = "^2.1.0"
pygame = "^2.5.2"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
